--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,14 @@ body {
   background: #fafafa;
 }
 
+.filters {
+  margin: 0 auto 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 40px;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
@@ -36,7 +44,7 @@ body {
 }
 
 .date-line {
-  stroke: #f5f5f5;
+  stroke: #f0f0f0;
   stroke-width: 1;
 }
 .Date-Block,
