--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,13 +44,13 @@ body {
 }
 
 .date-line {
-  stroke: #f0f0f0;
+  stroke: #f2f2f2;
   stroke-width: 1;
 }
 .Date-Block,
 .Date-Block-Outline {
   fill: #fff;
-  stroke: #ccc;
+  stroke: #ededed;
 }
 .start-lines,
 .end-lines {
@@ -93,4 +93,8 @@ body {
 
 .CurrentDay-Area {
   stroke: #60bdf1;
+}
+
+.header-parent {
+  font-weight: bold;
 }
