--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -99,3 +99,16 @@ body {
 .header-parent {
   font-weight: bold;
 }
+
+.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 12px;
+  padding: 8px;
+  margin-top: -20px;
+  font: 10px sans-serif;
+  background: #ddd;
+  pointer-events: none;
+  display: block;
+}
